[package]
name = "s_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
]}
micromath = "2.1"
hal = { package = "esp32-hal", version = "0.18.1" }
esp-alloc = { version = "0.5.0" }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
critical-section = "1.2.0"
heapless = { version = "0.8.0", default-features = false }
# esp-wifi  = { version = "0.11.0", features = ["esp32", "wifi"] }
# smoltcp = { version = "0.12.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
# embedded-svc = { version = "0.28.0", default-features = false, features = [] }
# embedded-io = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[[bin]]
name = "s_learn"
path = "src/bin/main.rs"
harness = false
test = false
doctest = false
bench = false

[lib]
path = "src/lib.rs"
test=false
harness = false
doctest = false
bench = false