[package]
name = "s_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
]}
micromath = "2.1"
esp-hal = { version = "0.22.0", features = [
    "esp32",
] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
critical-section = "1.2.0"
lcd_1602_i2c = "0.3.0"
lcd1602-diver = "0.1.1"
chrono = { version = "0.4", default-features = false}
keypad = "0.2.2"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[[bin]]
name = "s_learn"
path = "src/bin/main.rs"
harness = false
test = false
doctest = false
bench = false

[lib]
path = "src/lib.rs"
test=false
harness = false
doctest = false
bench = false